syntax = "proto3";
import "./common_messages.proto";
package aka_users;

message UserModel {
    string username = 1;
    string phoneNumber = 2;
    string _id = 3;
}

message CreateUser {
    string username = 1;
    string phoneNumber = 2;
    string password = 3;
}

message LoginRequest {
    string phoneNumber = 1;
    string password = 2;
}

message LoginResponse {
    string authToken = 1;
    string refreshToken = 2;
}

message AutoLoginResponse {
    string _id = 1;
}